--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,20 +6,22 @@ spring:
     gateway:
       routes:
         - id: ms-empleados
-          uri: http://localhost:9000
+        # configuracion sin docker  #uri: http://localhost:9000
+          uri: http://host.docker.internal:9000
           predicates:
             - Path=/api/empleados/**
-        - id: ms-user-service
-          uri: http://localhost:9001
+        - id: ms-empresas
+        # configuracion sin docker  uri: http://localhost:9001
+          uri: http://host.docker.internal:9001
           predicates:
             - Path=/api/empresas/**
 
 server:
-  port: 9090
+  port: 9111
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: "http://localhost:8761/eureka/"
+      defaultZone: "http://host.docker.internal:8761/eureka/"
     registerWithEureka: true
     fetchRegistry: true
