--- a/ms-empresas/src/main/resources/application.yml
+++ b/ms-empresas/src/main/resources/application.yml
@@ -3,7 +3,11 @@ spring:
   application:
     name: ms-empresas
   datasource:
-    url: jdbc:mysql://localhost:3308/empresasDB?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    # configuracion sin docker
+    # url: jdbc:mysql://localhost:3308/empresasDB?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+
+    # configuracion para docker
+    url: jdbc:mysql://host.docker.internal:3308/empresasDB?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
